Fixed to pass char* to PR_smprintf() instead of PRUnichar* which is not recognized, bug 105704, r=naving, sr=alecf.