mailnews/base/search/src/nsMsgSearchAdapter.cpp
@@ -164,7 +164,7 @@ nsMsgSearchAdapter::GetImapCharsetParam(const PRUnichar *destCharset)
 
 	// Specify a character set unless we happen to be US-ASCII.
   if (nsCRT::strcmp(destCharset, NS_LITERAL_STRING("us-ascii").get()))
-	    result = PR_smprintf("%s%S", nsMsgSearchAdapter::m_kImapCharset, destCharset);
+	    result = PR_smprintf("%s%s", nsMsgSearchAdapter::m_kImapCharset, NS_ConvertUCS2toUTF8(destCharset).get());
 
 	return result;
 }
